tests/ui/assign_to_imm_var.ina
// COMPILE_FAIL

fn main() {
    let a = 20;
    a = 50;
}
